--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <div class="currentTime"></div>
+        <div class="repositories"></div>
     </main>
     <footer>
 
