Added flexbox layout, fixed markup output

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div class="currentTime"></div>
-        <!-- <div class="search-field">Search repositories <input type="text" id="repoSearch" value="cthulhu"></div>-->
+        <div class="search-field">Search repositories <input type="text" id="repoSearch" value="cthulhu"></div>
         <div class="repositories"></div>
     </main>
     <footer>
