Added styles for search field

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <header>
-
+        <i class='fab fa-github fl'></i>
     </header>
     <main>
         <div class="currentTime"></div>
-        <div class="search-field">Search repositories <input type="text" id="repoSearch" value="cthulhu"></div>
+        <div class="search-field"> <input type="text" id="repoSearch" value="Search repositories"></div>
         <div class="repositories"></div>
     </main>
     <footer>
