--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <i class='fab fa-github fl'></i>
+        <i class='fab fa-github'></i>
     </header>
     <main>
         <div class="currentTime"></div>
