--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div class="currentTime"></div>
-        <div class="search-field"> <input type="text" id="repoSearch" value="Search repositories"></div>
+        <div class="search-field"> <input type="text" id="repoSearch" placeholder="Search repositories"></div>
         <div class="repositories"></div>
     </main>
     <footer>
