--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     </footer>
     <script src="assets/js/main.js"></script>
+    <script src="./node_modules/moment/min/moment-with-locales.min.js"></script>
 </body>
 
 </html>
