--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <header>
         <i class='fab fa-github'></i>
     </header>
+    <aside class="settings">
+        <h3>Settings</h3>
+        <input type="text" id="newGithubUser">
+    </aside>
     <main>
         <div class="currentTime"></div>
         <div class="search-field"> <input type="text" id="repoSearch" placeholder="Search repositories"></div>
