Created search function for gh user

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </header>
     <aside class="settings">
         <h3>Settings</h3>
-        <input type="text" id="newGithubUser">
+        Show repositories of: <br>
+        <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
     </aside>
     <main>
         <div class="currentTime"></div>
