--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="wrapper bg-1">
+    <div class="wrapper">
         <header>
             <i class='fab fa-github'></i>
         </header>
@@ -20,6 +20,13 @@
             <h3>Settings</h3>
             Show repositories of: <br>
             <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
+            Select Background:<br>
+            <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked> BG1
+            <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2"> BG2
+            <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3"> BG3
+            <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4"> BG4
+            <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5"> BG5
+            <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6"> BG6
         </aside>
         <main>
             <div class="currentTime"></div>
