Changed class for BG image to ID

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="bg-1">
         <header>
             <i class='fab fa-github'></i>
         </header>
