Added close button to settings panel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="page">
         <aside class="settings" style="margin-right: -320px;">
+            <button class="close-settings"><i class="far fa-times-circle"></i></button>
             <h3>Settings</h3>
             Show repositories of: <br>
             <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
