Added wrapper to settings button for dom manipulation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <div class="wrapper" id="bg-1" style="margin-left:0">
             <header>
                 <i class='fab fa-github'></i>
-                <button class="showSettings"><i class="fas fa-cog"></i></button>
+                <div class="settingsButton">
+                    <button class="showSettings"><i class="fas fa-cog"></i></button>
+                </div>
             </header>
             <main>
                 <div class="currentTime"></div>
