--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="page">
-        <aside class="settings" style="margin-right: -320px;">
+        <aside class="settings">
             <h3>Settings</h3>
             Show repositories of: <br>
             <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
