Added gap to settings Elements

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <div class="page">
         <aside class="settings">
             <h3>Settings</h3>
-            Show repositories of: <br>
-            <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
-            Select Background:<br>
-            <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked> BG1
-            <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2"> BG2
-            <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3"> BG3
-            <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4"> BG4
-            <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5"> BG5
-            <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6"> BG6
+            <div class="chooseUser settingsElement">
+                Show repositories of: <br>
+                <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
+            </div>
+            <div class="selectBackground settingsElement">Select Background:<br>
+                <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked> BG1
+                <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2"> BG2
+                <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3"> BG3
+                <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4"> BG4
+                <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5"> BG5
+                <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6"> BG6
+            </div>
         </aside>
         <div class="wrapper" id="bg-1" style="margin-left:0">
             <header>
