Added images to settings panel

--- a/index.html
+++ b/index.html
@@ -20,12 +20,30 @@
                 <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
             </div>
             <div class="selectBackground settingsElement">Select Background:<br>
-                <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked> BG1
-                <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2"> BG2
-                <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3"> BG3
-                <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4"> BG4
-                <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5"> BG5
-                <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6"> BG6
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked>
+                    <img src="assets/img/bg-wolf.jpg" alt="Background Image - Wolf">
+                </div>
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2">
+                    <img src="assets/img/bg-canyon.jpg" alt="Background Image - Canyon">
+                </div>
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3">
+                    <img src="assets/img/bg-house.jpg" alt="Background Image - House">
+                </div>
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4">
+                    <img src="assets/img/bg-mountain.jpg" alt="Background Image - Mountain">
+                </div>
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5">
+                    <img src="assets/img/bg-nature.jpg" alt="Background Image - Nature">
+                </div>
+                <div class="bgImgSelect">
+                    <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6">
+                    <img src="assets/img/bg-railroad-tracks.jpg" alt="Background Image - Railroad">
+                </div>
             </div>
         </aside>
         <div class="wrapper" id="bg-1" style="margin-left:0">
