Adjusted image diesplay

--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
                 Show repositories of: <br>
                 <input type="text" id="newGithubUser" value="FeliOdras"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
             </div>
-            <div class="selectBackground settingsElement">Select Background:<br>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked>
-                    <img src="assets/img/bg-wolf.jpg" alt="Background Image - Wolf">
-                </div>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2">
-                    <img src="assets/img/bg-canyon.jpg" alt="Background Image - Canyon">
-                </div>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3">
-                    <img src="assets/img/bg-house.jpg" alt="Background Image - House">
-                </div>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4">
-                    <img src="assets/img/bg-mountain.jpg" alt="Background Image - Mountain">
-                </div>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5">
-                    <img src="assets/img/bg-nature.jpg" alt="Background Image - Nature">
-                </div>
-                <div class="bgImgSelect">
-                    <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6">
-                    <img src="assets/img/bg-railroad-tracks.jpg" alt="Background Image - Railroad">
+            <div class="settingsElement">Select Background:
+                <div class="selectBackground">
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked>
+                        <img src="assets/img/bg-wolf.jpg" alt="Background Image - Wolf">
+                    </div>
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-2" class="bgimage" name="bgimage" value="bg-2">
+                        <img src="assets/img/bg-canyon.jpg" alt="Background Image - Canyon">
+                    </div>
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-3" class="bgimage" name="bgimage" value="bg-3">
+                        <img src="assets/img/bg-house.jpg" alt="Background Image - House">
+                    </div>
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-4" name="bgimage" class="bgimage" value="bg-4">
+                        <img src="assets/img/bg-mountain.jpg" alt="Background Image - Mountain">
+                    </div>
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-5" name="bgimage" class="bgimage" value="bg-5">
+                        <img src="assets/img/bg-nature.jpg" alt="Background Image - Nature">
+                    </div>
+                    <div class="bgImgSelect">
+                        <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6">
+                        <img src="assets/img/bg-railroad-tracks.jpg" alt="Background Image - Railroad">
+                    </div>
                 </div>
             </div>
         </aside>
