Created headline for repo display

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <main>
                 <div class="currentTime"></div>
                 <div class="search-field"> <input type="text" id="repoSearch" placeholder="Search repositories"></div>
+                <div class="reposHeadline"></div>
                 <div class="repositories"></div>
             </main>
             <footer>
