Added button to select bg section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <input type="radio" id="bg-6" name="bgimage" class="bgimage" value="bg-6">
                         <img src="assets/img/bg-railroad-tracks.jpg" alt="Background Image - Railroad">
                     </div>
+                    <button class="btnSelectBackground">Select background</button>
                 </div>
             </div>
         </aside>
