Refactored class Select BG Image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="settingsElement">Select Background:
                 <div class="selectBackground">
                     <div class="bgImgSelect">
-                        <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1" checked>
+                        <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1">
                         <img src="assets/img/bg-wolf.jpg" alt="Background Image - Wolf">
                     </div>
                     <div class="bgImgSelect">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </aside>
-        <div class="wrapper" id="bg-1" style="margin-left:0">
+        <div class="wrapper" id="" style="margin-left:0">
             <header>
                 <i class='fab fa-github'></i>
                 <div class="settingsButton">
