Added placeholder to github user settings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Settings</h3>
             <div class="chooseUser settingsElement">
                 Show repositories of: <br>
-                <input type="text" id="newGithubUser"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
+                <input type="text" id="newGithubUser" placeholder="Enter github username"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
             </div>
             <div class="settingsElement">Select Background:
                 <div class="selectBackground">
