Added semntic tags to settings panel

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
     <div class="page">
         <aside class="settings">
-            <h3>Settings</h3>
-            <div class="chooseUser settingsElement">
-                Show repositories of: <br>
+                <h3>Settings</h3>
+            <section class="chooseUser settingsElement">
+                <h4 class="sectionHeading">Show repositories of:</h4>
                 <input type="text" id="newGithubUser" placeholder="Enter github username"><span id="newGithubUserBttn"><i class="fas fa-search"></i></span>
-            </div>
-            <div class="settingsElement">Select Background:
+            </section>
+            <section class="settingsElement">
+                <h4 class="sectionHeading">Select Background:</h4>
                 <div class="selectBackground">
                     <div class="bgImgSelect">
                         <input type="radio" id="bg-1" class="bgimage" name="bgimage" value="bg-1">
@@ -46,7 +47,7 @@
                         <img src="assets/img/bg-railroad-tracks.jpg" alt="Background Image - Railroad">
                     </div>
                 </div>
-            </div>
+            </section>
         </aside>
         <div class="wrapper" id="" style="margin-left:0">
             <header>
